--- a/client/restaurants/src/components/Page_client/styles/Table.module.css
+++ b/client/restaurants/src/components/Page_client/styles/Table.module.css
@@ -1,9 +1,15 @@
+
 .container{
-    background: green;
     display: flex;
     height: 100%;
     width: 100%;
     justify-content: center;
     align-items: center;
     border:1.5px solid black;
+    color:#efdc6f;
+
+}
+.container:hover{
+    color: #1d44bf;
+    background: #efdc6f;
 }
